// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`gux-avatar-focusable #render component type (1) with valid markup 1`] = `
<gux-avatar-focusable-beta gs-avatar-size="large">
  <mock:shadow-root>
    <slot></slot>
  </mock:shadow-root>
  <button>
    <gux-avatar-beta name="Conor Darcy"></gux-avatar-beta>
  </button>
</gux-avatar-focusable-beta>
`;

exports[`gux-avatar-focusable #render component type (2) with valid markup 1`] = `
<gux-avatar-focusable-beta gs-avatar-size="large">
  <mock:shadow-root>
    <slot></slot>
  </mock:shadow-root>
  <a href="#">
    <gux-avatar-beta name="Conor Darcy"></gux-avatar-beta>
  </a>
</gux-avatar-focusable-beta>
`;

exports[`gux-avatar-focusable #render component type (3) with valid markup 1`] = `
<gux-avatar-focusable-beta gs-avatar-size="large">
  <mock:shadow-root>
    <slot></slot>
  </mock:shadow-root>
  <gux-avatar-change-photo-beta>
    <gux-avatar-beta name="Conor Darcy" slot="avatar"></gux-avatar-beta>
  </gux-avatar-change-photo-beta>
</gux-avatar-focusable-beta>
`;
